Fixed support for 1.19.4